SONAR-20021 Adding clean code taxonomy to issues endpoints